--- a/index.html
+++ b/index.html
@@ -1,2 +1,64 @@
-<h2>Wittgenstein Centre Data Explorer</h2>
-<p>Coming Soon.</p>
+<!DOCTYPE html>
+<html>
+<head>
+<style type="text/css">
+body
+{
+margin:  0;
+overflow: hidden;
+}
+
+#myIframe
+{
+height:  100%;
+left:    0px;
+position: absolute;
+top:    0px;
+width:  100%;
+}
+</style>
+
+</head>
+
+<body>
+
+<iframe id="myIframe" frameborder="0"></iframe>
+
+<script type='text/javascript'>
+{
+var loc = window.location.toString();
+var params = loc.split('?')[1];
+var i = document.getElementById('myIframe');
+
+if (params === undefined || params  === null) {
+i.src = "http://witt.null2.net/shiny/wic/";
+} else {
+i.src = "http://witt.null2.net/shiny/wic/" + "?" + params;
+}
+i.frameborder = "0"
+i.position = "fixed";
+i.border = "none";
+i.top = "0";
+i.right = "0";
+i.bottom = "0";
+i.left = "0";
+i.width = "100%";
+i.height = "100%";
+
+document.body.appendChild(i);
+};
+</script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-47048000-1', 'auto');
+  ga('send', 'pageview');
+</script>
+
+</body>
+
+</html>
