--- a/md/intro_logo.html
+++ b/md/intro_logo.html
@@ -1,3 +1,6 @@
  <a href="http://www.oeaw.ac.at/wic/">
-  <img src="Wittgenstein_LOGO_new2.jpg" style="height: 100%">
+  <img src="wic2.png" style="width: 49%">
+</a> 
+ <a href="http://www.adri.shu.edu.cn">
+  <img src="adri2.png" style="width: 49%">
 </a> 
