--- a/md/intro_logo1.html
+++ b/md/intro_logo1.html
@@ -1,7 +1,7 @@
 <a href="http://www.oeaw.ac.at/wic/">
-  <img src="Wittgenstein_LOGO_new2.jpg" width = "100%" style="margin: 1% 1%" height = "auto" overflow = "hidden">
+  <img src="Wittgenstein Centre_Logo2.png" width = "100%" style="margin: 1% 1%" height = "auto" overflow = "hidden">
 </a> 
 <br>
-<a href="http://adri.shu.edu.cn">
-  <img src="adri.png" width="100%" style="margin: 1% 1%" height = "auto" overflow = "hidden">
+<a href="http://www.oeaw.ac.at/">
+  <img src="oeaw_logo_446x192.png" width="100%" style="margin: 1% 1%" height = "auto" overflow = "hidden">
 </a> 
