--- a/md/intro_logo2.html
+++ b/md/intro_logo2.html
@@ -2,6 +2,7 @@
   <img src="iiasalogo.png" width="100%" style="margin: 1% 1%" height = "auto" overflow = "hidden">
 </a>
 <br>
-<a href="http://www.oeaw.ac.at/">
-  <img src="oeaw_logo_446x192.png" width="100%" style="margin: 1% 1%" height = "auto" overflow = "hidden">
+<br>
+<a href="http://adri.shu.edu.cn">
+  <img src="adri.png" width="100%" style="margin: 1% 1%" height = "auto" overflow = "hidden">
 </a> 
