--- a/md/intro_logo.html
+++ b/md/intro_logo.html
@@ -1,13 +1,4 @@
+<br>
 <a href="http://www.oeaw.ac.at/wic/">
-  <img src="Wittgenstein_LOGO_new2.jpg" width = "45%" style="margin: 2% 2%" height = "auto" overflow = "hidden">
-</a> 
-<a href="http://www.iiasa.ac.at/">
-  <img src="iiasalogo.png" width="45%" style="margin: 2% 2%" height = "auto" overflow = "hidden">
+  <img src="Wittgenstein Centre_Logo2.png" width = "100%" style="margin: 1% 1%" height = "auto" overflow = "hidden">
 </a>
- <a href="http://adri.shu.edu.cn">
-  <img src="adri.png" width="45%" style="margin: 2% 2%" height = "auto" overflow = "hidden">
-</a> 
-<a href="http://www.oeaw.ac.at/">
-  <img src="oeaw_logo_446x192.png" width="45%" style="margin: 2% 2%" height = "auto" overflow = "hidden">
-</a> 
- 
