--- a/md/about_details.html
+++ b/md/about_details.html
@@ -352,20 +352,18 @@ display: none;
 </div>
 
 
-<hr />
 <div id="overview" class="section level3">
 <h3>Overview</h3>
 <p>This website presents the 2023 revision of the Wittgenstein Centre
 population projections (Version 3), following the initial projections
 (Version 1) in 2013 (<a href="https://global.oup.com/academic/product/world-population-and-human-capital-in-the-twenty-first-century-9780198703167?cc=at&amp;lang=en&amp;">Lutz,
-Butz, and KC (Eds.) 2014</a>) and the 2018 update (Version 2) (<a href="https://op.europa.eu/en/publication-detail/-/publication/e1853ba8-4444-11e8-a9f4-01aa75ed71a1/language-en">Lutz,
+Butz, and KC (Eds.) 2014)</a> and the 2018 update (Version 2) (<a href="https://op.europa.eu/en/publication-detail/-/publication/e1853ba8-4444-11e8-a9f4-01aa75ed71a1/language-en">Lutz,
 Goujon, KC, Stonawski, and, Stilianakis (Eds.) 2018</a>). Further
 details on the updates and the revisions can be found in KC et
 al. (2024) and in other satellite papers focusing on the migration
-component (<a href="https://pure.iiasa.ac.at/id/eprint/19399/1/WP-24-001.pdf">Yildiz
-and Abel 2024</a>), the mortality component (Moradhvaj and KC 2024 -
-forthcoming), and the fertility component (Adhikari et al. 2024 -
-forthcoming).</p>
+component ([Yildiz and Abel 2024] (<a href="https://pure.iiasa.ac.at/id/eprint/19399/1/WP-24-001.pdf" class="uri">https://pure.iiasa.ac.at/id/eprint/19399/1/WP-24-001.pdf</a>)),
+the mortality component (Moradhvaj and KC 2024 - forthcoming), and the
+fertility component (Adhikari et al. 2024 - forthcoming).</p>
 <p>In 2021, <a href="https://data.ece.iiasa.ac.at/ssp/">the Shared
 Socioeconomic Pathways (SSPs) scenario community</a> related to the
 Intergovernmental Panel on Climate Change requested an update of the
@@ -415,7 +413,7 @@ Goujon</a></p></li>
 <ul>
 <li><p><a href="https://iiasa.ac.at/staff/guy-abel">Guy J.
 Abel</a></p></li>
-<li><p><a href="https://www.wittgensteincentre.org/en/staff/member/rengs.htm">Bernhard
+<li><p><a href="https://www.oeaw.ac.at/vid/people/staff/bernhard-rengs">Bernhard
 Rengs</a></p></li>
 </ul>
 <p>Researchers who participated in the development of the
@@ -472,7 +470,7 @@ Nikola Sander
 Bilal F. Barakat
 </td>
 <td>
-Samir K.C.<sup> a</sup>
+Samir KC <sup> a</sup>
 </td>
 <td>
 Warren C. Sanderson<sup> a</sup>
@@ -706,7 +704,7 @@ Michel Garenne
 Fernando Riosmena
 </td>
 <td>
-Kryštof Zeman<sup> a</sup>
+Krystof Zeman<sup> a</sup>
 </td>
 </tr>
 <tr>
